# Manual-Loop-Closure-Tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  environment.yml  launch_gui.py  requirements.txt
.github/workflows/: ci.yml
backend/catkin_ws/src/manual_loop_closure_backend/: CMakeLists.txt  README.md
backend/catkin_ws/src/manual_loop_closure_backend/include/: base_type.cpp  base_type.hpp  runtime_config.h
backend/catkin_ws/src/manual_loop_closure_backend/include/common/: custom_voxel_filter.hpp  runtime_logger.h
backend/catkin_ws/src/manual_loop_closure_backend/include/tools/: convert.hpp  data_struct.hpp  lidar_compress_module.hpp
backend/catkin_ws/src/manual_loop_closure_backend/scripts/: visualize_pose_graph.py
backend/catkin_ws/src/manual_loop_closure_backend/src/: data_saver.cpp  data_saver.h
backend/catkin_ws/src/manual_loop_closure_backend/src/common/: runtime_logger.cpp
backend/catkin_ws/src/manual_loop_closure_backend/src/ms_mapping/: ms_manual_loop_optimize.cpp  ms_mapping.h
docs/: INSTALL.md  TOOL_README.md
gui/: manual_loop_closure_tool.py  merge_pcds.py
gui/manual_loop_closure/: __init__.py  open3d_viewer.py  pcd_io.py  pose_graph_io.py  registration.py  session_resolver.py  trajectory_io.py
scripts/: build_backend_catkin.sh  capture_readme_screenshots.py  check_env.py  create_venv.sh  install_ubuntu20.sh
wiki/: FAQ.md  GUI-Workflow.md  Graph-Editing.md  Home.md  Optimization-Backends.md  Quick-Start.md  Troubleshooting.md  _Sidebar.md
